# bundestagswahl_sitzrechner

./: .gitignore  Cargo.lock.license  Cargo.toml  LICENSE  Makefile  README.md  banzhaff.py  btw17_bef.csv  btw21_kerg-vorl-cxu.csv  btw21_kerg_vorl.csv  bund.py  land.py  main.py  partei.py  partei_in_land.py  sls_executor.py  sls_executor17.py  sls_executor21.py  sls_utils.py  wahl.py
data/: 2013_gesamtergebnis.csv  2013_gesamtergebnis.url  2013_gesamtergebnis.xml  2013_strukturdaten.csv  2017_gesamtergebnis.url  2017_gesamtergebnis.xml  2017_strukturdaten.csv  2021-btw21_strukturdaten.url  2021-gesamtergebnis.xml  2021-strukturdaten.csv  2021-wdh-01_gesamtergebnis.xml  2021-wdh_gesamtergebnis.url  2021-wdh_gesamtergebnis.xml  2021-wdh_gesamtergebnis_01.url  2021-wdh_strukturdaten.csv  2021-wdh_strukturdaten.url  2021-wdh_strukturdaten_corr.csv  2025-01_gesamtergebnis.url  2025-01_gesamtergebnis.xml  2025-02_gesamtergebnis.url  2025-02_gesamtergebnis.xml  2025-02_strukturdaten.csv  2025-btw2025_strukturdaten.url  2025-gesamtergebnis.xml  2025_gesamtergebnis.xml  2025_gesamtergebnis_01.url  2025_strukturdaten.csv  2025_strukturdaten.url
demo/: main.tape
docs/: 2013_20131009_erl_sitzzuteilung.url  2013_btw13_heft3_kap8-sitzberechnung.url  2013_bundeswahlgesetz.url  2017_btw17_erl_sitzzuteilung.url  2017_btw17_sitzberechnung.url  2017_bundeswahlgesetz.url  2021_btw21_erl_sitzzuteilung.url  2021_btw21_sitzberechnung.url  2021_bundeswahlgesetz.url  2025_bundeswahlgesetz.url  rechnung_2017_wahlrecht_2021.ods
src/: banzhaf.rs  main.rs  parsing.rs  parsing_types.rs  sls.rs  (+6 more)
(+1 files in other folders)
